--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>News - Latest News, Breaking News, Bollywood, Sports, Business and Political News | Times of India</title>
     <link rel="stylesheet" type="text/css" href="style.css"> 
+    <script src = "index.js"></script>
     <link rel ="icon" type ="image/x-icon" href = "images/favicon.ico">
 </head>
 <body>
