refined TOI  and git and git practice

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>News - Latest News, Breaking News, Bollywood, Sports, Business and Political News | Times of India</title>
     <link rel="stylesheet" type="text/css" href="style.css"> 
     <script src = "index.js"></script>
-    <link rel ="icon" type ="image/x-icon" href = "images/favicon.ico">
+    <link rel ="icon" type ="image/x-icon" href = "images/unnamed.png">
 </head>
 <body>
     <div class="Main-container">
